--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-select": "^5.10.2",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
